# Modern-Data-Warehousing-and-Analytics-with-dbt-and-BigQuery

./: .gitignore  README.md  main.py  notes.txt  pyproject.toml
dbt_bigquery_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_bigquery_project/analyses/: cumulative_analysis.sql  data_segmentation.sql  date_range_exploration.sql  dimensions_exploration.sql  magnitude_analysis.sql  measures_exploration.sql  part_to_whole_analysis.sql  performance_analysis.sql  ranking_analysis.sql  report_customers.sql  report_products.sql  sources.yml
dbt_bigquery_project/models/gold/: dim_customers.sql  dim_products.sql  fact_sales.sql
dbt_bigquery_project/models/silver/: crm_cust_info.sql  crm_prd_info.sql  crm_sales_details.sql  erp_cust_az12.sql  erp_loc_a101.sql  erp_px_cat_g1v2.sql
dbt_bigquery_project/models/source/: sources.yml
