[project]
name = "modern-data-warehousing-and-analytics-with-dbt-and-bigquery"
version = "0.1.0"
description = "A project for modern data warehousing and analytics using dbt and BigQuery"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.10.2",
    "dbt-core>=1.10.13",
    "sqlfmt>=0.0.3",
]
